--- a/itis3135/index.html
+++ b/itis3135/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>I am so-and-so (with your name) and this is my ITIS3135 First Course Page </h1>
+    <h1>I am Tre Watson and this is my ITIS3135 First Course Page </h1>
 </body>
 </html>
